add task solution

--- a/src/styles/elementStyles/asaide.scss
+++ b/src/styles/elementStyles/asaide.scss
@@ -50,6 +50,10 @@
     margin-top: 10px;
     line-height: 1.4;
   }
+
+  @include desktop {
+    line-height: 1.5;
+  }
 }
 
 .plan__title {
@@ -79,6 +83,7 @@
   column-gap: 67px;
   width: 100%;
   height: auto;
+  border: 1px solid $asaideBottom-bg-color;
 
   @include tablet {
     padding: 40px 18px 114px 34px;
@@ -86,6 +91,11 @@
     column-gap: 0;
     height: 300px;
   }
+
+  @include desktop {
+    padding: 40px 100px 114px 55px;
+  }
+
   &--footer {
     background-color: $footer-bg-color;
     padding-block: 40px;
@@ -93,6 +103,21 @@
     margin-top: 20px;
     margin-bottom: 40px;
     column-gap: 45px;
+    border: none;
+
+    @include tablet {
+      width: 460px;
+      column-gap: 20px;
+      height: 135px;
+      padding-inline: 20px;
+    }
+
+    @include desktop {
+      width: 100%;
+      height: 260px;
+      padding-inline: 65px;
+      padding-block: 0;
+    }
 
     &::before {
       content: '';
@@ -102,6 +127,17 @@
       height: 1px;
       width: 100%;
       background: $footer-text-color;
+
+      @include tablet {
+        left: 20px;
+      }
+
+      @include desktop {
+        left: 0;
+        right: auto;
+        width: 1px;
+        height: 100%;
+      }
     }
   }
 
@@ -118,6 +154,10 @@
       margin-left: 0;
       margin-right: 64px;
     }
+
+    @include desktop {
+      margin-right: 102px;
+    }
   }
 
   &__galereyFoto {
@@ -130,8 +170,19 @@
       margin-right: 20px;
     }
 
+    @include desktop {
+      margin-right: 30px;
+      width: 170px;
+    }
+
     &--footer {
       width: 160px;
+
+      @include tablet {
+        width: 220px;
+        margin-right: 0;
+        row-gap: 20px;
+      }
     }
 
     &__links {
@@ -147,9 +198,17 @@
         font-size: 16px;
       }
 
+      @include desktop {
+        font-size: 22px;
+      }
+
       &--text {
         color: $footer-text-color;
         font-size: 19px;
+
+        @include tablet {
+          font-size: 16px;
+        }
       }
     }
   }
@@ -164,7 +223,7 @@
     background: $aside-text-color;
 
     @include tablet {
-      inset: 40px auto 40px 0;
+      inset: 40px 0 40px auto;
       width: 2px;
       height: auto;
     }
@@ -178,6 +237,7 @@
   width: 100%;
   height: 300px;
   box-sizing: border-box;
+  border: 1px solid $asaideBottom-bg-color;
 
   &__schedule {
     @include tablet {
@@ -186,7 +246,11 @@
   }
 
   &__information {
-    width: 144px;
+    width: 280px;
+
+    @include tablet {
+      width: 144px;
+    }
   }
 
   @include tablet {
@@ -197,9 +261,23 @@
     column-gap: 25px;
   }
 
+  @include desktop {
+    padding-inline: 102px;
+    padding-top: 40px;
+    padding-bottom: 48px;
+    column-gap: 30px;
+  }
+
   &--footer {
     background-color: $footer-bg-color;
     padding-block: 0;
+    border: none;
+
+    @include tablet {
+      flex-direction: column;
+      width: 220px;
+      padding-inline: 0;
+    }
   }
 
   &__planList {
@@ -210,6 +288,10 @@
       display: flex;
       flex-direction: column;
       row-gap: 5px;
+    }
+
+    @include desktop {
+      row-gap: 7px;
     }
 
     &__workTime {
