--- a/src/styles/elementStyles/header.scss
+++ b/src/styles/elementStyles/header.scss
@@ -22,6 +22,25 @@
       height: 385px;
       order: 2;
     }
+
+    @include desktop {
+      height: 655px;
+    }
+  }
+
+  &__line {
+    display: none;
+
+    @include desktop {
+      display: inline-block;
+      position: absolute;
+      bottom: 0;
+      left: 65px;
+    }
+
+    &__img {
+      height: 133px;
+    }
   }
 
   &__menu {
@@ -38,6 +57,10 @@
       top: 40px;
       position: absolute;
       margin: 0;
+    }
+
+    @include desktop {
+      left: 55px;
     }
   }
 
@@ -77,6 +100,13 @@
     margin-top: 94px;
   }
 
+  @include desktop {
+    position: relative;
+    margin-top: 203px;
+    padding-inline: 55px;
+    height: 457px;
+  }
+
   &__title {
     color: $museum-title-color;
     width: 280px;
@@ -97,6 +127,13 @@
       margin-left: 15px;
       text-align: start;
     }
+
+    @include desktop {
+      width: 470px;
+      height: 172px;
+      font-size: 72px;
+      margin-bottom: 60px;
+    }
   }
 
   &__link {
@@ -112,6 +149,11 @@
       margin-left: 15px;
       width: 270px;
       height: 70px;
+    }
+
+    @include desktop {
+      margin-left: auto;
+      margin-right: 0;
     }
 
     &__ticket {
