--- a/src/styles/elementStyles/footer.scss
+++ b/src/styles/elementStyles/footer.scss
@@ -1,14 +1,63 @@
 .footer {
   width: 100%;
+  height: auto;
   background-color: $footer-bg-color;
   padding-inline: 20px;
   margin: 0;
   box-sizing: border-box;
+  padding-bottom: 4px;
+
+  @include tablet {
+    padding-inline: 35px;
+    padding-bottom: 0;
+  }
+
+  @include desktop {
+    padding-inline: 55px;
+  }
+
+  &__conteiner {
+    @include tablet {
+      display: flex;
+      width: 100%;
+    }
+
+    @include desktop {
+      column-gap: 110px;
+      overflow: hidden;
+    }
+  }
+
+  &__flex {
+    @include tablet {
+      display: flex;
+      flex-direction: column;
+    }
+
+    @include desktop {
+      display: flex;
+      flex-direction: row;
+      column-gap: 65px;
+    }
+  }
 
   &__top {
     display: flex;
     justify-content: space-between;
     column-gap: 150px;
+
+    @include tablet {
+      display: flex;
+      flex-direction: column;
+      gap: 62px 0;
+      width: 100px;
+      justify-content: start;
+      margin-top: 51px;
+    }
+
+    @include desktop {
+      margin-top: 0;
+    }
   }
 
   &__title {
@@ -21,6 +70,12 @@
     line-height: 100%;
     margin-top: 32px;
     margin-bottom: 40px;
+
+    @include tablet {
+      margin: 0;
+      width: 100px;
+      height: 72px;
+    }
   }
 
   &__social {
@@ -30,12 +85,23 @@
     margin-bottom: 64px;
     column-gap: 20px;
 
+    @include tablet {
+      margin: 0;
+      width: 100px;
+      height: 72px;
+    }
+
     &__icon {
       display: flex;
       align-items: center;
       justify-content: center;
       width: 40px;
       height: 40px;
+
+      @include tablet {
+        align-items: start;
+        justify-content: start;
+      }
     }
 
     &__icon--img {
@@ -55,11 +121,26 @@
     display: flex;
     column-gap: 20px;
     width: 100%;
+
+    @include tablet {
+      display: flex;
+      margin-top: 51px;
+      column-gap: 25px;
+      margin-left: 20px;
+    }
+
+    @include desktop {
+      margin-top: 0;
+    }
   }
 
   &__contacts {
     width: 128px;
     height: auto;
+
+    @include tablet {
+      width: 220px;
+    }
   }
 
   &__desing {
@@ -69,6 +150,17 @@
     margin-inline: auto;
     margin-bottom: 128px;
     margin-top: 40px;
+
+    @include tablet {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      padding-bottom: 40px;
+    }
+
+    @include desktop {
+      margin-top: 90px;
+    }
   }
 
   &__desing--text {
@@ -81,6 +173,17 @@
     font-size: 12px;
     line-height: 141%;
     text-align: center;
+
+    @include tablet {
+      text-align: start;
+      padding-bottom: 40px;
+    }
+  }
+
+  .end {
+    @include tablet {
+      text-align: end;
+    }
   }
 
   &__up {
@@ -93,5 +196,9 @@
     border-radius: 50%;
     justify-self: end;
     z-index: 1;
+
+    @include tablet {
+      display: none;
+    }
   }
 }
