Add footer section with social media icons and styles

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -12,4 +12,12 @@
   &--close {
     background-image: url(../images/icons/close.png);
   }
+
+  &--instagram {
+    background-image: url(../images/icons/instagram.png);
+  }
+
+  &--facebook {
+    background-image: url(../images/icons/facebook.png);
+  }
 }
