--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -3,6 +3,7 @@
   font-weight: 400;
   color: $menu-text-color;
   background-color: $menu-bg-color;
+  z-index: 100;
 
   &::after {
     content: '';
@@ -24,20 +25,9 @@
     margin: 27px 0;
 
     @include on-tablet {
+      grid-column: span 1;
       flex-direction: row;
       margin: 39px 0;
-    }
-  }
-
-  &__line {
-    width: 100%;
-    height: 1px;
-    margin: 0;
-    background-color: $menu-text-color;
-
-    @include on-tablet {
-      width: 1px;
-      height: auto;
     }
   }
 }
