--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -12,6 +12,11 @@
     @include on-tablet {
       gap: 20px 24px;
     }
+
+    &--footer {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 20px 32px;
+    }
   }
 
   &__link {
@@ -39,6 +44,15 @@
       transform: scale(0);
       transform-origin: left;
       transition: transform 0.3s;
+    }
+
+    &--footer {
+      width: max-content;
+      font-size: 0.88rem;
+
+      &::after {
+        background-color: $footer-text-color;
+      }
     }
 
     &:hover::after {
