--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -15,6 +15,12 @@
 
       gap: 38px;
     }
+
+    &--footer {
+      @include on-tablet {
+        --columns: 1;
+      }
+    }
   }
 
   &__title {
@@ -28,5 +34,10 @@
     margin: 0;
     font-size: 0.87rem;
     line-height: 150%;
+  }
+
+  &__link {
+    text-decoration: none;
+    color: initial;
   }
 }
