--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import 'blocks/icon';
 @import 'blocks/top-bar';
 @import 'blocks/menu';
+@import 'blocks/middle-line';
 @import 'blocks/nav';
 @import 'blocks/section-button';
 @import 'blocks/schedule';
@@ -18,3 +19,4 @@
 @import 'blocks/carousel';
 @import 'blocks/gallery';
 @import 'blocks/subscription';
+@import 'blocks/footer';
