--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -21,3 +21,5 @@ $carousel-pagination-active-color: #1a5a4c;
 $subscription-text-color: #fff;
 $subscription-input-text-color: #687480;
 $subscription-additional-element-color: #f14a27;
+$footer-text-color: #0f0e08;
+$footer-middle-line-color: #1a5a4c80;
