--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -20,4 +20,27 @@
     height: 61px;
     display: block;
   }
+
+  &__icon-content {
+    display: flex;
+    gap: 20px;
+
+    @include on-tablet {
+      gap: 32px;
+    }
+  }
+
+  &--footer {
+    position: relative;
+    width: 100%;
+    row-gap: 62px;
+    grid-column: 1/-1;
+    margin-top: 0;
+
+    @include on-tablet {
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+    }
+  }
 }
