--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -23,3 +23,4 @@ $subscription-input-text-color: #687480;
 $subscription-additional-element-color: #f14a27;
 $footer-text-color: #0f0e08;
 $footer-middle-line-color: #1a5a4c80;
+$scroll-to-top-border-color: #1a5a4c;
