add task solution

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,7 +4,7 @@
 
   &__body {
     margin: 0;
-    background: $c-gray;
+    background: $main-bg-color;
     color: $main-text-color;
     min-width: 320px;
   }
