--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -53,7 +53,7 @@
       align-items: center;
       grid-column: 1/ -1;
       box-shadow: 0 2px 0 0 #1a5a4c40;
-      background-color: $c-gray;
+      background-color: $main-bg-color;
       padding: 20px 5px;
       row-gap: 25px;
       transform: translateY(-41%);
