--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -10,7 +10,7 @@ $root-font-size: 16px;
 // colors
 $main-text-color: #0f0e08;
 $card-text-color: #4e4e4e;
-$c-gray: #eee;
+$main-bg-color: #eee;
 $button-border-color: #1a5a4c;
 $menu-bg-color: #1a5a4c;
 $menu-text-color: #fff;
