add task solution

--- a/src/styles/elementStyles/main.scss
+++ b/src/styles/elementStyles/main.scss
@@ -26,7 +26,7 @@
   }
 
   @include desktop {
-    padding-inline: 55px;
+    padding-inline: 0;
   }
 
   &__conteiner {
@@ -57,6 +57,10 @@
       margin-top: 90px;
       margin-bottom: 0;
     }
+
+    @include desktop {
+      margin-left: 55px;
+    }
   }
 
   &__article {
@@ -79,6 +83,8 @@
     @include desktop {
       flex-direction: row;
       column-gap: 130px;
+      box-sizing: border-box;
+      padding-inline: 55px;
     }
 
     &__img {
@@ -174,6 +180,10 @@
   &__position {
     position: relative;
     margin-bottom: 100px;
+
+    @include desktop {
+      padding-inline: 0;
+    }
 
     &__div {
       background-color: $c-gray;
@@ -378,7 +388,7 @@
   align-items: center;
   width: 100%;
   height: auto;
-  background-image: url('/src/images/subscrib\ bg.png');
+  background-image: url('/src/images/Rectangle\ 22.png');
   background-repeat: no-repeat;
   background-size: 100% 100%;
   padding-inline: 40px;
