add task solution

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -7,6 +7,24 @@
   }
 }
 
+@mixin handy-small {
+  @media (min-width: 320px) {
+    @content;
+  }
+}
+
+@mixin handy {
+  @media (min-width: 375px) {
+    @content;
+  }
+}
+
+@mixin handy-m {
+  @media (min-width: 425px) {
+    @content;
+  }
+}
+
 @mixin tablet {
   @media (min-width: 768px) {
     @content;
@@ -14,7 +32,7 @@
 }
 
 @mixin desktop {
-  @media (min-width: 1024px) {
+  @media (min-width: 1280px) {
     @content;
   }
 }
