--- a/src/styles/elementStyles/asaide.scss
+++ b/src/styles/elementStyles/asaide.scss
@@ -41,6 +41,14 @@
   &--text {
     color: $footer-text-color;
     text-decoration: none;
+
+    @include handy-small {
+      font-size: 10px;
+    }
+
+    @include handy {
+      font-size: 14px;
+    }
   }
 }
 
@@ -70,6 +78,14 @@
 
   &--text {
     color: $footer-text-color;
+
+    @include handy-small {
+      font-size: 14px;
+    }
+
+    @include handy {
+      font-size: 15px;
+    }
   }
 }
 
@@ -80,10 +96,17 @@
   flex-direction: row;
   box-sizing: border-box;
   padding-block: 24px;
-  column-gap: 67px;
   width: 100%;
   height: auto;
   border: 1px solid $asaideBottom-bg-color;
+
+  @include handy-small {
+    column-gap: 0;
+  }
+
+  @include handy {
+    column-gap: 20px;
+  }
 
   @include tablet {
     padding: 40px 18px 114px 34px;
@@ -100,10 +123,14 @@
     background-color: $footer-bg-color;
     padding-block: 40px;
     position: relative;
-    margin-top: 20px;
+
     margin-bottom: 40px;
     column-gap: 45px;
     border: none;
+
+    @include handy-small {
+      margin-top: 70px;
+    }
 
     @include tablet {
       width: 460px;
@@ -150,6 +177,10 @@
     margin-top: 2px;
     margin-left: 20px;
 
+    @include handy-small {
+      margin-right: 48px;
+    }
+
     @include tablet {
       margin-left: 0;
       margin-right: 64px;
@@ -190,13 +221,9 @@
       color: $aside-text-color;
       font-family: 'IBM Plex Sans', serif;
       font-weight: 500;
-      font-size: 20px;
+      font-size: 16px;
       line-height: 100%;
       width: 100%;
-
-      @include tablet {
-        font-size: 16px;
-      }
 
       @include desktop {
         font-size: 22px;
@@ -204,7 +231,7 @@
 
       &--text {
         color: $footer-text-color;
-        font-size: 19px;
+        font-size: 14px;
 
         @include tablet {
           font-size: 16px;
