--- a/src/styles/elementStyles/main.scss
+++ b/src/styles/elementStyles/main.scss
@@ -103,7 +103,7 @@
       flex-direction: row;
       font-family: 'IBM Plex Sans', sans-serif;
       font-weight: 700;
-      font-size: 18px;
+      font-size: 16px;
       line-height: 150%;
       color: $museum-title-color;
       width: 100%;
@@ -118,6 +118,7 @@
         color: #687480;
 
         @include tablet {
+          font-size: 14px;
           margin-right: 20px;
         }
       }
@@ -129,7 +130,7 @@
       /* stylelint-disable-next-line font-family-name-quotes */
       font-family: 'Montserrat', sans-serif;
       font-weight: 400;
-      font-size: 30px;
+      font-size: 28px;
       line-height: 100%;
       text-align: center;
       color: $museum-title-color;
@@ -195,6 +196,30 @@
       position: absolute;
       top: 174px;
       left: 40px;
+      box-sizing: border-box;
+
+      @include handy-small {
+        width: 190px;
+        height: 97px;
+        top: 140px;
+        left: 43px;
+        padding-block: 15px;
+      }
+
+      @include handy {
+        width: 260px;
+        height: 132px;
+        top: 165px;
+        left: 37px;
+        padding-block: 25px;
+      }
+
+      @include handy-m {
+        width: 280px;
+        height: 140px;
+        top: 195px;
+        left: 50px;
+      }
 
       @include tablet {
         width: 570px;
@@ -218,11 +243,23 @@
       flex-direction: row;
       font-family: 'IBM Plex Sans', sans-serif;
       font-weight: 700;
-      font-size: 18px;
+      font-size: 16px;
       line-height: 150%;
       color: $museum-title-color;
       width: 100%;
       justify-content: space-between;
+
+      @include handy-small {
+        font-size: 10px;
+      }
+
+      @include handy {
+        font-size: 14px;
+      }
+
+      @include handy-m {
+        font-size: 16px;
+      }
 
       div:first-child {
         font-weight: 500;
@@ -236,10 +273,23 @@
       /* stylelint-disable-next-line font-family-name-quotes */
       font-family: 'Montserrat', sans-serif;
       font-weight: 400;
-      font-size: 30px;
+      font-size: 25px;
       line-height: 100%;
       text-align: center;
       color: $museum-title-color;
+
+      @include handy-small {
+        font-size: 15px;
+      }
+
+      @include handy {
+        font-size: 20px;
+      }
+
+      @include handy-m {
+        font-size: 25px;
+        margin-block: 20px;
+      }
 
       @include tablet {
         text-align: start;
