add task solution

--- a/src/styles/elementStyles/main.scss
+++ b/src/styles/elementStyles/main.scss
@@ -182,6 +182,12 @@
     position: relative;
     margin-bottom: 100px;
 
+    &__img {
+      @include laptop {
+        height: 700px;
+      }
+    }
+
     @include desktop {
       padding-inline: 0;
     }
@@ -232,16 +238,21 @@
         left: 60px;
       }
 
-      @include desktop {
-        inset: auto 50% -64px;
+      @include laptop {
+        inset: auto 50% -70px;
         transform: translateX(-50%);
+      }
+
+      @include desktop {
+        inset: auto 50% -85px;
+        transform: translateX(-50%);
+        width: 710px;
+        height: 220px;
+        padding-inline: 100px;
       }
     }
 
     &__text {
-      display: flex;
-      flex-direction: row;
-      font-family: 'IBM Plex Sans', sans-serif;
       font-weight: 700;
       font-size: 16px;
       line-height: 150%;
