--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -31,6 +31,12 @@
   }
 }
 
+@mixin laptop {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
+
 @mixin desktop {
   @media (min-width: 1280px) {
     @content;
