add task solution

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -56,3 +56,16 @@
     column-gap: 30px;
   }
 }
+
+
+@mixin link-hover($color: $green-color) {
+  text-decoration: none;
+  color: inherit;
+  transition: color 0.3s ease;
+  line-height: 1.5;
+
+  &:hover {
+    text-decoration: underline;
+    color: $color;
+  }
+}
