--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,187 +1,225 @@
 .footer {
-  background: $bg-color-primary;
-  color: white;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  margin: 50px 0;
+  background-color: #fff;
+  color: #0F0E08;
+  font-family: $font-primary;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1;
 
   @include content-padding-inline;
 
   &__container {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-
-    @include on-tablet {
-      flex-direction: row;
-      justify-content: space-between;
-    }
-  }
-
-  &__branding {
-    display: flex;
     align-items: center;
-    justify-content: space-between;
-    gap: 20px;
+    gap: 24px;
+    padding: 40px 0;
 
     @include on-tablet {
-      flex-direction: column;
-      justify-content: flex-start;
-      gap: 60px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-flow: row;
+    }
+
+    @include on-desktop {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
     }
   }
 
-  &__logo {
-    font-family: $font-secondary;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 36px;
-    color: #0f0e08;
-    padding: 20px 0;
-    text-align: left;
+  &__wrap {
+    width: 100%;
+
+    @include on-desktop {
+      grid-column: span 3;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 
-  &__socials {
+  &__info {
+    position: relative;
     display: flex;
-    gap: 16px;
+    gap: 20px;
+    padding-bottom: 40px;
 
-    &-link {
-      display: inline-block;
-      width: 24px;
-      height: 24px;
+    @include on-tablet {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
 
-      img {
-        width: 100%;
-        height: 100%;
+    &::after {
+      @include on-desktop {
+        content: '';
+        display: block;
+        background-color: $green-color;
+        position: absolute;
+        top: 0;
+        right: -15px;
+        width: 1px;
+        height: 80%;
       }
     }
   }
 
-  &__content {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-
-    @include on-tablet {
-      flex-direction: row;
-      justify-content: space-between;
-    }
+  &__block {
+    flex: 1;
+    min-width: 200px;
   }
 
-  &__details {
+  &__brand {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    padding: 20px 0;
-  }
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 
-  &__working-hours,
-  &__contact-info {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    text-align: left;
-    padding: 10px;
-
-    &-title {
-      margin-bottom: 20px;
-      font-family: $font-primary;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 141%;
-      color: #0f0e08;
-    }
-
-    ul {
-      display: flex;
+    @include on-tablet {
+      order: -1;
+      align-self: flex-start;
       flex-direction: column;
-      gap: 5px;
-      list-style: none;
-      padding: 0;
+      gap: 60px;
     }
 
-    li,
-    p {
-      font-family: $font-primary;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 150%;
-      color: #0f0e08;
-      text-align: left;
-      margin-bottom: 0;
+    &__logo {
+      font-family: $font-secondary;
+      font-weight: 700;
+      font-size: 36px;
+      text-decoration: none;
+      color: inherit;
+      margin: 0;
+      max-width: 160px;
+      transition: transform 0.3s ease;
+
+      &:hover {
+        transform: scale(1.05);
+      }
+    }
+
+    &__socials {
+      display: flex;
+      gap: 16px;
+
+      a {
+        @include link-hover;
+
+        img {
+          width: 24px;
+          height: 24px;
+          display: block;
+          transition: transform 0.3s ease-in-out;
+        }
+
+        &:hover img {
+          transform: scale(1.2);
+        }
+      }
     }
   }
 
-  &__notes {
-    display: flex;
-    flex-direction: column;
+  &__block-title {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.41;
+    margin-bottom: 8px;
+    margin-top: 0;
+  }
+
+  &__schedule {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    &-item {
+      margin-bottom: 4px;
+      line-height: 1.4;
+    }
   }
 
   &__note {
+    font-weight: 400;
     font-size: 14px;
-    color: #6c6c6c;
-    margin: 0;
+    line-height: 1.5;
+
+    strong {
+      display: block;
+      margin-bottom: 4px;
+      font-weight: 700;
+    }
+  }
+
+  &__address {
+    a {
+      @include link-hover($green-color);
+    }
+
+    br {
+      margin-bottom: 4px;
+    }
   }
 
   &__nav {
+    position: relative;
     display: flex;
     flex-direction: row;
-    gap: 20px;
-    justify-content: space-between;
     align-items: flex-start;
-
-    &-links {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      text-align: left;
-      gap: 30px;
-      list-style: none;
-      padding: 20px 0;
-    }
-  }
-
-  & a {
-    text-decoration: none;
-    color: #0f0e08;
-    font-family: $font-primary;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 100%;
-
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-
-  &__copyright {
-    margin-top: 40px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    font-family: $font-primary;
-    font-weight: 300;
-    font-size: 12px;
-    line-height: 141%;
-    color: #777;
+    gap: 20px;
+    padding-top: 40px;
 
     @include on-tablet {
-      justify-content: space-between;
-      flex-direction: row;
+      gap: 60px;
+      padding-top: 60px;
+    }
+
+    @include on-desktop {
+      padding-left: 60px;
+      padding-top: 0;
+      min-height: 100%;
+      align-self: flex-start;
+    }
+
+    &::before {
+      position: absolute;
+      content: '';
+      display: block;
+      background-color: $green-color;
+      width: 100%;
+      height: 1px;
+      top: 0;
+      left: 0;
+      bottom: 10px;
+
+      @include on-desktop {
+        display: none;
+      }
     }
   }
-}
 
-.separator {
-  display: flex;
-  width: 100%;
-  height: 1px;
-  margin: 20px 0;
-  background: $green-color;
+  &__links {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 
-  @include on-tablet {
-    height: 260px;
-    width: 1px;
+    a {
+      @include link-hover($green-color);
+    }
+  }
+
+  &__bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 1.41;
+
+    @include on-tablet {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+
+  &__credit {
+    text-align: right;
   }
 }
