--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -3,69 +3,86 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 35%;
+  min-height: 399px;
   background-color: $green-color;
   display: flex;
   flex-direction: column;
   justify-content: center;
   color: #fff;
-  pointer-events: none;
   z-index: 1000;
   visibility: hidden;
   opacity: 0;
-  transform: translateY(-10px);
-  transition:
-    opacity 0.3s ease-in-out,
-    visibility 0.3s ease-in-out,
-    transform 0.3s ease-in-out;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  pointer-events: none;
+  transform: translateY(-5px);
+  transition: opacity 0.3s ease-in-out,
+  visibility 0.3s ease-in-out;
+  box-shadow: 0 4px 6px rgba(0, 0, 0.1);
 
   &:target {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
     transform: translateY(0);
-
-    @include content-padding-inline;
+    padding: 20px;
+    cursor: pointer;
 
     @include on-tablet {
-      min-height: 255px;
-      padding: 20px;
+      min-height: 225px;
+      padding: 34px;
       flex-direction: row;
+      justify-content: space-between;
+      align-items: flex-start;
+      gap: 30px;
+      pointer-events: auto;
     }
 
     @include on-desktop {
-      height: auto;
+      padding: 55px;
     }
   }
 
   &-wrapper {
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    width: 50%;
-    gap: 28px;
+    flex-direction: row;
+
+    width: 100%;
 
     @include on-tablet {
+      flex-direction: row;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
+      max-width: 60%;
+    }
+  }
+
+  &-icon-close {
+    display: block;
+    padding: 10px;
+    align-self: flex-start;
+
+    img {
+      cursor: pointer;
+      width: 24px;
+      height: 24px;
     }
   }
 
   &-nav {
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 30px;
     justify-content: center;
-    align-self: flex-start;
-    gap: 20px;
+    align-items: center;
+
+    @include on-tablet {
+      flex-direction: row;
+    }
 
     &-item {
       display: flex;
       flex-direction: column;
-      gap: 5px;
+      gap: 24px;
       list-style: none;
-      padding: 10px;
 
       a {
         text-decoration: none;
@@ -86,33 +103,26 @@
     }
   }
 
-  &-icon-close {
-    display: block;
-    padding: 10px;
-    text-align: right;
-    align-self: flex-start;
-
-    img {
-      cursor: pointer;
-      width: 24px;
-      height: 24px;
-    }
-  }
-
   &-hours {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 24px;
     border-top: 1px solid #fff;
+    margin-top: 32px;
+    padding-top: 24px;
+    width: 100%;
 
     @include on-tablet {
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: flex-start;
       align-items: flex-start;
-      border-left: 1px solid #fff;
       border-top: none;
-      padding: 0 24px;
-      margin: 0 24px;
+      border-left: 1px solid #fff;
+      margin-top: 0;
+      padding-top: 0;
+      padding-inline: 100px;
+      gap: 30px;
+      max-width: 50%;
     }
 
     &-schedule {
@@ -120,7 +130,6 @@
       flex-direction: column;
       gap: 10px;
       text-align: left;
-      padding: 10px;
 
       &-title {
         margin-bottom: 20px;
@@ -139,18 +148,21 @@
         line-height: 150%;
         color: #fff;
       }
+
+      b {
+        font-weight: 700;
+      }
     }
 
     &-closing-note {
       max-width: 170px;
-      padding: 10px;
-
-      @include on-tablet {
-        padding-left: 0;
-      }
 
       p {
         margin: 10px 0;
+        font-family: $font-primary;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 150%;
         color: #fff;
       }
     }
