--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -84,6 +84,7 @@
     transition: all 0.3s ease;
     box-sizing: border-box;
 
+
     &::placeholder {
       color: #687480;
     }
@@ -91,6 +92,12 @@
     &:focus {
       border-color: orangered;
       text-transform: uppercase;
+    }
+
+    input:-webkit-autofill {
+      background-color: white !important;
+      color: black !important;
+      transition: background-color 9999s ease-in-out 0s;
     }
   }
 
