--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,13 @@
-@font-face {
-  font-family: Roboto, Arial, Helvetica, sans-serif;
-  src: url('../fonts/Roboto-Regular-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
+$system-fonts: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+$font-ibm: 'IBM Plex Sans', $system-fonts;
+$font-montserrat: 'Montserrat', $system-fonts;
+
+@mixin font-ibm {
+  font-family: $font-ibm;
+  font-display: swap;
+}
+
+@mixin font-montserrat {
+  font-family: $font-montserrat;
+  font-display: swap;
 }
