--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,42 @@
-h1 {
-  @extend %h1;
+.text__item {
+  @include font-ibm;
+
+  font-size: 16px;
+
+  &-type {
+    font-weight: $font-weight-medium;
+    color: #687480;
+    text-transform: uppercase;
+  }
+
+  &-date {
+    font-size: 16px;
+    font-weight: $font-weight-bold;
+    color: #1a5a4c;
+  }
+
+  &-title {
+    @include font-montserrat;
+
+    font-size: 28px;
+    font-weight: $font-weight-regular;
+    line-height: 100%;
+    color: #0f0e08;
+  }
+}
+
+.secondary-title {
+  @include font-montserrat;
+
+  margin-bottom: 40px;
+
+  font-size: 36px;
+  font-weight: $font-weight-bold;
+  color: #0f0e08;
+  text-align: center;
+
+  @include onTablet {
+    font-size: 48px;
+    text-align: left;
+  }
 }
