--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,18 @@
 $c-gray: #eee;
+
+// Colors
+$color-primary: #1a5a4c;
+$color-primary-light: #1a5a4c80;
+$color-accent: #f14a27;
+$color-accent-dark: #d13d1e;
+$color-text: #0f0e08;
+$color-text-light: #687480;
+$color-background: #fff;
+$color-gray: #e0e0e0;
+
+// Font weights
+$font-weight-light: 300;
+$font-weight-regular: 400;
+$font-weight-medium: 500;
+$font-weight-semibold: 600;
+$font-weight-bold: 700;
