fixed linter issue

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -67,10 +67,13 @@
     display: flex;
     gap: 20px;
 
+
+
     img {
       display: block;
       width: 24px;
       height: 24px;
+      @include hover(scale, 1.1);
     }
 
     @include onTablet {
@@ -127,6 +130,15 @@
 
   &__contacts {
     width: 50%;
+    line-height: 150%;
+    justify-content: space-between;
+
+    a {
+      color: $color-text;
+      text-decoration: none;
+
+      @include hover(color, $color-primary);
+    }
 
     @include onTablet {
       max-width: 220px;
@@ -177,6 +189,8 @@
   }
 
   &__nav {
+
+
     margin-bottom: 80px;
 
     @include onTablet {
@@ -184,9 +198,7 @@
       margin: 0 auto 120px;
     }
 
-    @include onDesktop {
-      display: inline-block;
-    }
+
 
     &-items {
       @include onDesktop {
