add task solution

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
 $c-gray: #eee;
+$c-carbon: rgba(26, 90, 76, 1);
+$c-orange: rgba(241, 74, 39, 1);
+$c-events-name: rgba(15, 14, 8, 1);
+$c-events-event: rgba(104, 116, 128, 1);
+$c-events-data: rgba(26, 90, 76, 1);
+$c-events-description: rgba(78, 78, 78, 1);
+$effectDuration: 0.3s;
+
+//      padding-bottom: 100%; // завжди робить картинку квадратною
+//      height: 0;
