--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,20 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './block/header';
+@import './block/aside';
+@import './block/page';
+@import './block/current-events';
+@import './block/gallry';
+@import './block/swiper';
+@import './block/subscription';
+@import './block/footer';
 
 body {
   background: $c-gray;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
