--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -29,6 +29,10 @@
       @include on-tablet {
         grid-column: 2/3;
       }
+
+      &-svg {
+        @include hover(transform, scale(1.2));
+      }
     }
 
     &--menu {
@@ -67,12 +71,14 @@
         grid-area: 1/1 / auto/2;
         margin-left: 34px;
         padding-top: 40px;
-
-        @include hover(transform, scale(1.2));
       }
 
       @include on-desktop {
         margin-left: 55px;
+      }
+
+      &-svg {
+        @include hover(transform, scale(1.2));
       }
     }
 
@@ -195,6 +201,11 @@
       font-weight: 700;
       font-size: 14px;
       line-height: 100%;
+
+      &:hover {
+        color: $c-carbon;
+        transition: transform 0.3s ease-in-out;
+      }
     }
   }
 }
