--- a/src/styles/block/subscription.scss
+++ b/src/styles/block/subscription.scss
@@ -76,8 +76,9 @@
     font-size: 15px;
     line-height: 100%;
     align-items: center;
-    color: rgba(255, 255, 255, 1);
+    color: #000;
     transition: all 0.3s;
+    padding-left: 15px;
 
     @include on-tablet {
       width: 374px;
@@ -110,10 +111,14 @@
       width: 70px;
       height: 70px;
     }
-
-    &:hover {
-      background-color: rgb(158, 49, 27);
-      transition: transform 0.3s ease-in-out;
-    }
   }
+}
+
+.header__content--button:hover {
+  background-color: $c-carbon;
+}
+
+.subscription__wrapper-form:hover .form__button {
+  transform: rotate(180deg);
+  transition: transform 0.3s ease-in-out;
 }
