--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,18 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './block/page';
 @import './block/header';
 @import './block/aside';
-@import './block/page';
 @import './block/current-events';
 @import './block/gallry';
 @import './block/swiper';
 @import './block/subscription';
 @import './block/footer';
+
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   background: $c-gray;
