--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -9,21 +9,17 @@
   @include content-padding-inline;
 
   &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
     gap: 24px;
     padding: 40px 0;
 
     @include on-tablet {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-auto-flow: row;
+      grid-template-columns: repeat(6, 1fr);
     }
 
     @include on-desktop {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(12, 1fr);
+      align-items: start;
     }
   }
 
@@ -31,21 +27,25 @@
     width: 100%;
 
     @include on-desktop {
-      grid-column: span 3;
+      grid-column: span 4;
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(12, 1fr);
     }
   }
 
   &__info {
     position: relative;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     padding-bottom: 40px;
 
     @include on-tablet {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-column: span 2;
+    }
+
+    @include on-desktop {
+      grid-column: 3/4;
     }
 
     &::after {
@@ -160,22 +160,19 @@
 
   &__nav {
     position: relative;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
     padding-top: 40px;
 
-    @include on-tablet {
-      gap: 60px;
-      padding-top: 60px;
-    }
+      @include on-tablet {
+        grid-column: span 2;
+      }
 
     @include on-desktop {
       padding-left: 60px;
       padding-top: 0;
-      min-height: 100%;
-      align-self: flex-start;
+      grid-column: span 4;
     }
 
     &::before {
