add task solution

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -27,7 +27,7 @@
     width: 100%;
 
     @include on-desktop {
-      grid-column: span 4;
+      grid-column: span 10;
       display: grid;
       grid-template-columns: repeat(12, 1fr);
     }
@@ -42,10 +42,12 @@
 
     @include on-tablet {
       grid-column: span 2;
+      gap: 24px;
     }
 
     @include on-desktop {
       grid-column: 3/4;
+      gap: 30px;
     }
 
     &::after {
@@ -55,7 +57,7 @@
         background-color: $green-color;
         position: absolute;
         top: 0;
-        right: -15px;
+        right: -30px;
         width: 1px;
         height: 80%;
       }
