--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -14,8 +14,9 @@
   opacity: 0;
   pointer-events: none;
   transform: translateY(-5px);
-  transition: opacity 0.3s ease-in-out,
-  visibility 0.3s ease-in-out;
+  transition:
+    opacity 0.3s ease-in-out,
+    visibility 0.3s ease-in-out;
   box-shadow: 0 4px 6px rgba(0, 0, 0.1);
 
   &:target {
