--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,7 +1,7 @@
 .gallery {
   position: relative;
   padding: 100px 0;
-
+  
   @include content-padding-inline;
 
   &__section-title {
@@ -21,13 +21,12 @@
 
   &__slider {
     display: flex;
-
     flex-wrap: nowrap;
     gap: 20px;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     margin-bottom: 32px;
-    transition: all 0.3s ease;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 
     @include on-desktop {
       flex: none;
@@ -47,9 +46,6 @@
     max-height: 410px;
     object-fit: cover;
     box-shadow: 0 4px 6px rgba(0, 0, 0.1);
-    transition:
-      transform 0.3s ease,
-      box-shadow 0.3s ease;
 
     @include on-desktop {
       height: 100%;
@@ -60,6 +56,7 @@
 
     &:hover {
       transform: scale(1.02);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
       box-shadow: 0 6px 10px rgba(0, 0, 0.15);
     }
 
@@ -77,6 +74,7 @@
 
       &:hover {
         transform: scale(1.02);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
         box-shadow: 0 6px 10px rgba(0, 0, 0.15);
       }
     }
@@ -93,6 +91,7 @@
 
       &:hover {
         transform: scale(1.02);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
         box-shadow: 0 6px 10px rgba(0, 0, 0.15);
       }
     }
@@ -111,6 +110,7 @@
 
       &:hover {
         transform: scale(1.02);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
         box-shadow: 0 6px 10px rgba(0, 0, 0.15);
       }
     }
@@ -130,6 +130,7 @@
 
       &:hover {
         transform: scale(1.02);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
         box-shadow: 0 6px 10px rgba(0, 0, 0.15);
       }
     }
