add task solution

--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,63 @@
-%h1 {
-  font-family: Roboto, sans-serif;
+%h2 {
+  @extend%montserrat-700;
+
+  margin: 0;
+  font-size: 36px;
+  line-height: 1;
+  color: $main-color;
+  letter-spacing: 0;
+  text-align: center;
+
+  @include on-tablet {
+    font-size: 48px;
+  }
+}
+
+%h3 {
+  @extend%montserrat-400;
+
+  margin: 0;
+  font-size: 28px;
+  line-height: 1;
+  color: $main-color;
+  letter-spacing: 0;
+
+  @include on-tablet {
+    font-size: 36px;
+  }
+}
+
+%montserrat-700 {
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+}
+
+%montserrat-400 {
+  font-family: Montserrat, sans-serif;
   font-weight: 400;
+}
+
+%ibm-700 {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 700;
+}
+
+%ibm-600 {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 600;
+}
+
+%ibm-500 {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 500;
+}
+
+%ibm-400 {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 400;
+}
+
+%ibm-300 {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 300;
 }
