--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
 $c-gray: #eee;
+$main-color: #0f0e08;
+$accent-color: #1a5a4c;
+$text-color: #4e4e4e;
+$secondary-color: #687480;
+$secondary-accent-color: #f14a27;
