add task correction

--- a/src/styles/block/about-us.scss
+++ b/src/styles/block/about-us.scss
@@ -15,7 +15,7 @@
   &__image {
     z-index: -1;
     position: absolute;
-    background-image: linear-gradient(#000000bf),
+    background-image: linear-gradient(#000000bf, #000000bf),
       url(../images/about-us-image.jpg);
     background-size: cover;
     background-position: center;
