--- a/src/styles/block/events.scss
+++ b/src/styles/block/events.scss
@@ -166,7 +166,7 @@
   }
 
   &__picture {
-    background-image: url(../images/lecture-image.svg);
+    background-image: url(../images/lecture-image.jpg);
     background-size: cover;
     height: 210px;
     width: 100%;
