--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,63 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'header';
+@import 'actuals';
+@import 'menu';
+@import 'lection';
+@import 'galery';
+@import 'subscribe';
+@import 'footer';
+
+@mixin hover($_property, $_toValue) {
+  transition: #{$_property} 0.3s;
+  &:hover {
+    #{$_property}: $_toValue;
+  }
+}
+
+@mixin on-tablet {
+  @media (min-width: 640px) {
+    @content;
+  }
+}
+
+@mixin on-desktop {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
+
+@mixin on-big-desktop {
+  @media (min-width: 1200px) {
+    @content;
+  }
+}
+
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 
 body {
   background: $c-gray;
+  background-color: #fff;
+  font-family: 'IBM Plex Sans', sans-serif;
+  color: #000;
+  padding: 0;
+  overflow-x: hidden;
+  box-sizing: border-box;
+  width: 100%;
+  margin: 0;
+  scroll-behavior: smooth;
+
+  body.menu-open {
+    overflow: hidden;
+  }
 }
