--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -109,11 +109,46 @@
   padding-bottom: 20px;
 }
 
+.footer__map {
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+}
+
 .footer__street {
   font-size: 14px;
   font-weight: 400;
   line-height: 150%;
   margin: 0;
+  text-decoration: none;
+  color: #0f0e08;
+}
+
+.footer__number {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 150%;
+  margin: 0;
+  text-decoration: none;
+  color: #0f0e08;
+}
+
+.footer__fax {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 150%;
+  margin: 0;
+  text-decoration: none;
+  color: #0f0e08;
+}
+
+.footer__email {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 150%;
+  margin: 0;
+  text-decoration: none;
+  color: #0f0e08;
 }
 
 .footer__place {
@@ -223,7 +258,7 @@
 
   @media (min-width: 768px) {
     grid-column: span 6;
-    padding-top: 20px;
+    padding: 20px 0;
     flex-direction: row;
     justify-content: space-between;
   }
