--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -22,14 +22,13 @@
   padding: 88px 20px;
   justify-content: center;
   align-self: center;
+  max-width: 570px;
 
   @media (min-width: 768px) {
-    padding: 82px 155px;
+    padding: 82px 0;
   }
 
   @media (min-width: 1280px) {
-    // max-width: 570px;
-    // max-height: 224px;
     padding: 163px 0;
   }
 }
@@ -59,6 +58,7 @@
 
 .subscribe__title {
   gap: 16px;
+  justify-content: flex-start;
 }
 
 .subscribe__button {
@@ -70,7 +70,7 @@
 
 .form__input {
   width: 230px;
-  height: 50px;
+  height: 70px;
   background-color: #fff;
   font-family: Montserrat, sans-serif;
   font-size: 14px;
@@ -78,15 +78,24 @@
   color: #687480;
   padding: 18px 0 18px 24px;
   border: none;
+
+  @media (min-width: 768px) {
+    width: 374px;
+  }
+
+  @media (min-width: 1280px) {
+    width: 470px;
+  }
 }
 
 .submit {
-  height: 50px;
-  width: 50px;
+  height: 70px;
+  width: 70px;
   background-color: #f14a27;
-  background-image: url(../images/arrow__right.png);
+  background-image: url(../images/baseline-keyboard_arrow_right-24px.png);
   background-position: 50%;
   background-repeat: no-repeat;
+  border: none;
 }
 
 .form {
@@ -96,6 +105,7 @@
 
   @media (min-width: 768px) {
     width: 460px;
+    gap: 16px;
   }
 
   @media (min-width: 1280px) {
