--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -158,12 +158,12 @@
 }
 
 .header__tickets {
-  padding: 0 20px;
+  margin: 0 auto;
+
+  height: 50px;
   position: relative;
-  width: 100%;
-  overflow: hidden;
-  max-width: 280px;
-  height: 43px;
+  display: flex;
+  justify-content: center;
 
   @media (min-width: 768px) {
     grid-column: 1 / 4;
@@ -172,22 +172,41 @@
 
   @media (min-width: 1280px) {
     grid-column: 3 / 6;
+    margin: 0;
+    padding: 0;
   }
 }
 
-.tickets__img {
-  position: relative;
-  max-width: 100%;
-  height: auto;
-  display: block;
+.tickets {
+  display: flex;
+
+  width: 280px;
+  padding: 0 0 10px 20px;
+  border: 1px solid #1a5a4c;
+
+  background-color: #fff;
 }
 
 .tickets__title {
-  position: absolute;
-  margin: 0;
   font-size: 16px;
   font-weight: 500;
-  top: 50%;
-  left: 40%;
-  transform: translate(-50%, -50%);
+  color: #0f0e08;
+  margin: 0;
+  white-space: nowrap;
+  padding: 15px 85px 27px 63px;
+}
+
+.tickets__btn {
+  width: 50px;
+  height: 50px;
+  background-color: #1a5a4c;
+  background-image: url(../images/arrow__right.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  justify-self: right;
+  background-size: 24px 24px;
+  border: none;
+  cursor: pointer;
+  right: 0;
+  top: 0;
 }
