--- a/src/styles/lection.scss
+++ b/src/styles/lection.scss
@@ -64,12 +64,12 @@
   font-weight: 400;
   color: #0f0e08;
   font-family: Montserrat, sans-serif;
-  align-self: center;
-  justify-content: center;
+  text-align: center;
   padding-bottom: 20px;
 
   @media (min-width: 768px) {
     font-size: 36px;
     padding-bottom: 50px;
+    text-align: start;
   }
 }
