--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -79,6 +79,14 @@
   padding: 18px 0 18px 24px;
   border: none;
 
+  &:hover {
+    border: 2px solid #f14a27;
+  }
+
+  &:active {
+    border: 2px solid #f14a27;
+  }
+
   @media (min-width: 768px) {
     width: 374px;
   }
