--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -122,6 +122,10 @@
   margin: 0;
   text-decoration: none;
   color: #0f0e08;
+
+  &:hover {
+    color: #1a5a4c;
+  }
 }
 
 .footer__number {
@@ -131,6 +135,10 @@
   margin: 0;
   text-decoration: none;
   color: #0f0e08;
+
+  &:hover {
+    color: #1a5a4c;
+  }
 }
 
 .footer__fax {
@@ -140,6 +148,10 @@
   margin: 0;
   text-decoration: none;
   color: #0f0e08;
+
+  &:hover {
+    color: #1a5a4c;
+  }
 }
 
 .footer__email {
@@ -149,6 +161,10 @@
   margin: 0;
   text-decoration: none;
   color: #0f0e08;
+
+  &:hover {
+    color: #1a5a4c;
+  }
 }
 
 .footer__place {
@@ -210,6 +226,10 @@
   font-size: 14px;
   font-weight: 400;
   color: #0f0e08;
+
+  &:hover {
+    color: #1a5a4c;
+  }
 }
 
 .menu__second {
