--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -42,6 +42,10 @@
   font-weight: 500;
   font-family: 'IBM Plex Sans', sans-serif;
   margin: 0;
+
+  &:hover {
+    color: #000;
+  }
 }
 
 .menu__nav {
@@ -89,6 +93,10 @@
     padding: 0 20px;
     object-fit: contain;
     height: 85%;
+  }
+
+  @media (min-width: 1023px) {
+    height: 190px;
   }
 }
 
