--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,27 @@
+@import url(./blocks/header.scss);
+@import url(./blocks/actual_events.scss);
+@import url(./blocks/menu.scss);
+@import url(./blocks/lection.scss);
+
+@import './utils/mixins';
+
 @import 'utils';
 @import 'fonts';
 @import 'typography';
 
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
 body {
   background: $c-gray;
+  margin: 0;
+  overflow-x: hidden;
+
+  &:has(.menu:target) {
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
 }
+
