--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -7,7 +7,7 @@ body {
 
 body:has(aside:target) {
   // overflow: hidden; /* not to scroll the page */
-  
+
   // overflow: unset;
   // overflow: scroll;
   // overflow: visible;
@@ -15,8 +15,16 @@ body:has(aside:target) {
   // opacity: 0.5;
 }
 
-.container {
-  padding-inline: 20px;
+.section__title {
+  margin: 0;
+  margin-bottom: 40px;
+
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 100%;
+
+  text-align: center;
 }
 
 
